--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.JokersFruitCatch" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.JokersFruitCatch" parent="android:Theme.Material.Light.NoActionBar">
+        <!-- Android 12+ Splash Screen Overrides -->
+        <item name="android:windowSplashScreenBackground">@android:color/white</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@android:color/transparent</item>
+        <item name="android:windowSplashScreenAnimationDuration">0</item>
+    </style>
 </resources>
